Fix broken layout

--- a/assets/objects.less
+++ b/assets/objects.less
@@ -4,6 +4,7 @@
     max-width: 1000px;
     margin: 10px auto;
     height: 100vh;
+    width: 95%;
 }
 
 .box{
